--- a/index.html
+++ b/index.html
@@ -3,23 +3,128 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GitHub Pages Test</title>
+    <title>Bot Installer</title>
     <style>
         body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
             margin: 0;
             font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
+            background: linear-gradient(135deg, #121212, #1f1f1f);
+            color: #ffffff;
         }
-        h1 {
-            color: #0078d7;
+        header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 20px 40px;
+            background: #1c1c1c;
+        }
+        header .logo {
+            font-size: 1.5rem;
+            font-weight: bold;
+            color: #ffffff;
+        }
+        header nav a {
+            color: #ffffff;
+            text-decoration: none;
+            margin-left: 20px;
+            font-size: 1rem;
+        }
+        header nav a:hover {
+            color: #00acee;
+        }
+        .hero {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            text-align: center;
+            padding: 80px 20px;
+            background: url('https://via.placeholder.com/1920x1080') no-repeat center center/cover;
+            color: #ffffff;
+        }
+        .hero h1 {
+            font-size: 3rem;
+            margin-bottom: 20px;
+        }
+        .hero p {
+            font-size: 1.2rem;
+            margin-bottom: 40px;
+        }
+        .hero button {
+            padding: 10px 20px;
+            font-size: 1rem;
+            color: #ffffff;
+            background: #0078d7;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+        .hero button:hover {
+            background: #005bb5;
+        }
+        .features {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 20px;
+            padding: 40px;
+        }
+        .feature {
+            background: #2a2a2a;
+            padding: 20px;
+            border-radius: 10px;
+            text-align: center;
+        }
+        .feature h3 {
+            font-size: 1.5rem;
+            margin-bottom: 10px;
+        }
+        .feature p {
+            font-size: 1rem;
+        }
+        footer {
+            text-align: center;
+            padding: 20px;
+            background: #1c1c1c;
+            color: #ffffff;
+        }
+        footer a {
+            color: #00acee;
+            text-decoration: none;
         }
     </style>
 </head>
 <body>
-    <h1>GitHub Pages is Live!</h1>
+    <header>
+        <div class="logo">BotInstaller</div>
+        <nav>
+            <a href="#features">Features</a>
+            <a href="#about">About</a>
+            <a href="#contact">Contact</a>
+        </nav>
+    </header>
+
+    <section class="hero">
+        <h1>Welcome to BotInstaller</h1>
+        <p>Your ultimate tool for seamless bot integration.</p>
+        <button>Get Started</button>
+    </section>
+
+    <section id="features" class="features">
+        <div class="feature">
+            <h3>Easy Integration</h3>
+            <p>Quickly add powerful bots to your platforms in just a few clicks.</p>
+        </div>
+        <div class="feature">
+            <h3>Advanced Customization</h3>
+            <p>Tailor every detail to match your specific needs.</p>
+        </div>
+        <div class="feature">
+            <h3>24/7 Support</h3>
+            <p>We are here to help you anytime, anywhere.</p>
+        </div>
+    </section>
+
+    <footer>
+        <p>&copy; 2025 BotInstaller. All rights reserved. <a href="#">Privacy Policy</a></p>
+    </footer>
 </body>
 </html>
