--- a/index.html
+++ b/index.html
@@ -12,44 +12,35 @@
             color: #ffffff;
         }
         header {
+            position: sticky;
+            top: 0;
+            z-index: 1000;
             display: flex;
             justify-content: space-between;
             align-items: center;
-            padding: 20px 40px;
+            padding: 20px 5%;
             background: #1c1c1c;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
         }
-        header .logo {
+        .logo {
             font-size: 1.5rem;
             font-weight: bold;
             color: #ffffff;
         }
-        header nav a {
+        nav {
+            display: flex;
+            align-items: center;
+        }
+        nav a {
             color: #ffffff;
             text-decoration: none;
-            margin-left: 20px;
+            margin: 0 15px;
             font-size: 1rem;
         }
-        header nav a:hover {
+        nav a:hover {
             color: #00acee;
         }
-        .hero {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            text-align: center;
-            padding: 80px 20px;
-            background: url('https://via.placeholder.com/1920x1080') no-repeat center center/cover;
-            color: #ffffff;
-        }
-        .hero h1 {
-            font-size: 3rem;
-            margin-bottom: 20px;
-        }
-        .hero p {
-            font-size: 1.2rem;
-            margin-bottom: 40px;
-        }
-        .hero button {
+        .cta-button {
             padding: 10px 20px;
             font-size: 1rem;
             color: #ffffff;
@@ -57,48 +48,34 @@
             border: none;
             border-radius: 5px;
             cursor: pointer;
+            text-decoration: none;
         }
-        .hero button:hover {
+        .cta-button:hover {
             background: #005bb5;
         }
-        .features {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 20px;
-            padding: 40px;
+        .icon {
+            margin: 0 15px;
+            cursor: pointer;
+            opacity: 0.8;
+            transition: opacity 0.3s;
         }
-        .feature {
-            background: #2a2a2a;
-            padding: 20px;
-            border-radius: 10px;
-            text-align: center;
-        }
-        .feature h3 {
-            font-size: 1.5rem;
-            margin-bottom: 10px;
-        }
-        .feature p {
-            font-size: 1rem;
-        }
-        footer {
-            text-align: center;
-            padding: 20px;
-            background: #1c1c1c;
-            color: #ffffff;
-        }
-        footer a {
-            color: #00acee;
-            text-decoration: none;
+        .icon:hover {
+            opacity: 1;
         }
     </style>
 </head>
 <body>
     <header>
-        <div class="logo">BotInstaller</div>
         <nav>
-            <a href="#features">Features</a>
-            <a href="#about">About</a>
-            <a href="#contact">Contact</a>
+            <div class="logo"> <!-- Add your minimalist logo here --> </div>
+            <a href="#commands" onclick="window.location='commands.html';">Commands</a>
+            <a href="#help" onclick="window.location='help.html';">Help</a>
+            <a href="#status" onclick="window.location='status.html';">Status</a>
+        </nav>
+        <nav>
+            <img src="https://via.placeholder.com/20" alt="Search" class="icon" onclick="window.location='search.html';">
+            <img src="https://via.placeholder.com/20" alt="Profile" class="icon" onclick="window.location='profile.html';">
+            <a href="#download" class="cta-button" onclick="window.location='download.html';">Download Here</a>
         </nav>
     </header>
 
